@startuml



interface PlayingCard{
    Integer: index()
}

interface SuitCard{
    Integer: index()
    Color: color()
}

class RoyalSuitCard {
  face()
  index()
  color()
}

class NumberSuitCard {
  index()
  color()
}

enum Face {
    String: displayName()
}

enum Color {
    String: symbol()
}

class TrumCard {
    Integer: index()
}

PlayingCard --> SuitCard
PlayingCard --> TrumCard
SuitCard --> RoyalSuitCard
SuitCard --> NumberSuitCard
NumberSuitCard --> Color
RoyalSuitCard --> Color
RoyalSuitCard --> Face

@enduml
